# cython-tests

./: .gitignore  README.md
basic/: README.md  build.py  demo.py  pyproject.toml  setup.py
basic/src/octo/: __init__.py  core.py
fastapi/: README.md  build.py  demo.py  pyproject.toml  setup.py
fastapi/src/ooo/: api.py  configs.py  types.py
fastapi/src/ooo/db/: __init__.py  models.py
fastapi/src/ooo/routers/: counters.py
